okay that fixed the browsers conflicts with the date ui, but now the element is too short until you click a date and then it goes to the proper size, so I'm adding a line height to see if that will force it to stay the same size

--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -127,5 +127,6 @@ button[type="submit"] {
     min-width: 0;
     -webkit-appearance: none;
     appearance: none;
+    line-height: 2.5;
   }
 }
